--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
     "valibot": "0.29.0"
   },
   "devDependencies": {
+    "@iconify/tools": "4.0.2",
+    "@iconify/types": "2.0.0",
+    "@iconify/utils": "2.1.22",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.64",
@@ -85,13 +88,10 @@
     "postcss": "8.4.35",
     "postcss-styled-syntax": "0.6.4",
     "prettier": "3.2.5",
-    "prisma": "5.10.2",
+    "prisma": "^5.13.0",
     "stylelint": "16.2.1",
     "stylelint-use-logical-spec": "5.0.1",
-    "typescript": "5.4.2",
-    "@iconify/tools": "4.0.2",
-    "@iconify/types": "2.0.0",
-    "@iconify/utils": "2.1.22"
+    "typescript": "5.4.2"
   },
   "resolutions": {
     "immutable": "3.7.4"
@@ -100,6 +100,6 @@
     "react": "18.2.0"
   },
   "prisma": {
-    "schema": "./src/prisma/schema.prisma"
+    "schema": "prisma/schema.prisma"
   }
 }
