--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "apexcharts": "3.47.0",
     "bootstrap-icons": "1.11.3",
     "classnames": "2.5.1",
+    "clsx": "^2.1.1",
     "date-fns": "3.3.1",
     "draft-js": "0.11.7",
     "kbar": "0.1.0-beta.45",
@@ -64,7 +65,8 @@
     "tailwindcss": "3.4.1",
     "tailwindcss-logical": "3.0.1",
     "tsx": "4.7.1",
-    "valibot": "0.29.0"
+    "valibot": "0.29.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@iconify/tools": "4.0.2",
