--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tanstack/match-sorter-utils": "8.11.8",
     "@tanstack/react-table": "8.13.2",
     "apexcharts": "3.47.0",
+    "axios": "^1.7.2",
     "bootstrap-icons": "1.11.3",
     "classnames": "2.5.1",
     "clsx": "^2.1.1",
